examples/test/testpolicy2702.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2702
  namespace: namespace203
spec:
  podSelector:
    matchLabels:
      key22: value40
      key13: value19
      key24: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value26
      podSelector:
        matchLabels:
          key14: value42
          key30: value43
